--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "mdx-deck": "^3.0.13"
   },
   "dependencies": {
+    "@emotion/core": "^10.0.22",
+    "@emotion/styled": "^10.0.23",
     "react-helmet": "^5.2.1",
     "typescript": "^3.7.2"
   },
